@@ -1,6 +1,6 @@
 package com.market.analysis.unit.presentation.controller;
 
-import static org.hamcrest.Matchers.hasSize;
+import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
@@ -29,7 +29,9 @@ import org.springframework.test.web.servlet.MockMvc;
 import com.market.analysis.application.dto.ProhibitedKeywordDTO;
 import com.market.analysis.application.dto.ProhibitedTickerDTO;
 import com.market.analysis.application.mapper.ProhibitedTickerDTOMapper;
-import com.market.analysis.domain.model.ProhibitedTicker;
+import com.market.analysis.domain.exception.DomainErrorCodes;
+import com.market.analysis.domain.exception.DomainValidationException;
+import com.market.analysis.domain.model.PageResult;
 import com.market.analysis.domain.port.in.ManageProhibitedKeywordUseCase;
 import com.market.analysis.domain.port.in.ManageProhibitedTickerUseCase;
 import com.market.analysis.presentation.controller.ProhibitedTickerController;
@@ -56,8 +58,6 @@ class ProhibitedTickerControllerTest {
     @MockitoBean
     private ProhibitedTickerDTOMapper mapper;
 
-    private ProhibitedTicker testProhibitedTicker1;
-    private ProhibitedTicker testProhibitedTicker2;
     private ProhibitedTickerDTO testDTO1;
     private ProhibitedTickerDTO testDTO2;
     private ProhibitedKeywordDTO testKeywordDTO1;
@@ -65,9 +65,6 @@ class ProhibitedTickerControllerTest {
 
     @BeforeEach
     void setUp() {
-        testProhibitedTicker1 = new ProhibitedTicker("AAPL", "Test reason 1", Instant.now());
-        testProhibitedTicker2 = new ProhibitedTicker("GOOGL", "Test reason 2", Instant.now());
-
         testDTO1 = ProhibitedTickerDTO.builder()
                 .id(1L)
                 .ticker("AAPL")
@@ -98,57 +95,75 @@ class ProhibitedTickerControllerTest {
     }
 
     @Test
-    @DisplayName("Should list all prohibited tickers")
+    @DisplayName("Should list all prohibited tickers with pagination")
     void testListProhibitedTickers() throws Exception {
-        // Arrange
-        List<ProhibitedTickerDTO> prohibitedTickers = Arrays.asList(testDTO1, testDTO2);
-        List<ProhibitedKeywordDTO> prohibitedKeywords = Arrays.asList(testKeywordDTO1, testKeywordDTO2);
-        when(manageProhibitedTickerUseCase.getAllProhibitedTickers()).thenReturn(prohibitedTickers);
-        when(manageProhibitedKeywordUseCase.getAllProhibitedKeywords()).thenReturn(prohibitedKeywords);
-        when(mapper.toDTO(testProhibitedTicker1)).thenReturn(testDTO1);
-        when(mapper.toDTO(testProhibitedTicker2)).thenReturn(testDTO2);
+        List<ProhibitedTickerDTO> tickers = Arrays.asList(testDTO1, testDTO2);
+        List<ProhibitedKeywordDTO> keywords = Arrays.asList(testKeywordDTO1, testKeywordDTO2);
+        PageResult<ProhibitedTickerDTO> tickerPage = new PageResult<>(tickers, 0, 10, 2, 1);
+        PageResult<ProhibitedKeywordDTO> keywordPage = new PageResult<>(keywords, 0, 10, 2, 1);
 
-        // Act & Assert
+        when(manageProhibitedTickerUseCase.getProhibitedTickers(anyInt(), anyInt())).thenReturn(tickerPage);
+        when(manageProhibitedKeywordUseCase.getProhibitedKeywords(anyInt(), anyInt())).thenReturn(keywordPage);
+
         mockMvc.perform(get("/prohibited-tickers"))
                 .andExpect(status().isOk())
                 .andExpect(view().name("prohibited-tickers/list"))
-                .andExpect(model().attributeExists("prohibitedTickers"))
-                .andExpect(model().attribute("prohibitedTickers", hasSize(2)))
-                .andExpect(model().attributeExists("prohibitedKeywords"))
-                .andExpect(model().attribute("prohibitedKeywords", hasSize(2)));
+                .andExpect(model().attributeExists("tickerPage"))
+                .andExpect(model().attributeExists("keywordPage"));
 
-        verify(manageProhibitedTickerUseCase, times(1)).getAllProhibitedTickers();
-        verify(manageProhibitedKeywordUseCase, times(1)).getAllProhibitedKeywords();
+        verify(manageProhibitedTickerUseCase, times(1)).getProhibitedTickers(0, WebConstants.DEFAULT_PAGE_SIZE);
+        verify(manageProhibitedKeywordUseCase, times(1)).getProhibitedKeywords(0, WebConstants.DEFAULT_PAGE_SIZE);
     }
 
     @Test
-    @DisplayName("Should return empty list when no prohibited tickers exist")
+    @DisplayName("Should return empty page when no prohibited tickers exist")
     void testListProhibitedTickersEmpty() throws Exception {
-        // Arrange
-        when(manageProhibitedTickerUseCase.getAllProhibitedTickers()).thenReturn(Arrays.asList());
-        when(manageProhibitedKeywordUseCase.getAllProhibitedKeywords()).thenReturn(Arrays.asList());
+        PageResult<ProhibitedTickerDTO> emptyTickerPage = new PageResult<>(List.of(), 0, 10, 0, 0);
+        PageResult<ProhibitedKeywordDTO> emptyKeywordPage = new PageResult<>(List.of(), 0, 10, 0, 0);
 
-        // Act & Assert
+        when(manageProhibitedTickerUseCase.getProhibitedTickers(anyInt(), anyInt())).thenReturn(emptyTickerPage);
+        when(manageProhibitedKeywordUseCase.getProhibitedKeywords(anyInt(), anyInt())).thenReturn(emptyKeywordPage);
+
         mockMvc.perform(get("/prohibited-tickers"))
                 .andExpect(status().isOk())
                 .andExpect(view().name("prohibited-tickers/list"))
-                .andExpect(model().attributeExists("prohibitedTickers"))
-                .andExpect(model().attribute("prohibitedTickers", hasSize(0)))
-                .andExpect(model().attributeExists("prohibitedKeywords"))
-                .andExpect(model().attribute("prohibitedKeywords", hasSize(0)));
+                .andExpect(model().attributeExists("tickerPage"))
+                .andExpect(model().attributeExists("keywordPage"));
 
-        verify(manageProhibitedTickerUseCase, times(1)).getAllProhibitedTickers();
-        verify(manageProhibitedKeywordUseCase, times(1)).getAllProhibitedKeywords();
+        verify(manageProhibitedTickerUseCase, times(1)).getProhibitedTickers(0, WebConstants.DEFAULT_PAGE_SIZE);
+        verify(manageProhibitedKeywordUseCase, times(1)).getProhibitedKeywords(0, WebConstants.DEFAULT_PAGE_SIZE);
     }
 
     @Test
-    @DisplayName("Should delete prohibited ticker and redirect to list with success flash")
+    @DisplayName("Should navigate to specific page")
+    void testListProhibitedTickersPageNavigation() throws Exception {
+        List<ProhibitedTickerDTO> tickers = Arrays.asList(testDTO1);
+        List<ProhibitedKeywordDTO> keywords = Arrays.asList(testKeywordDTO1);
+        PageResult<ProhibitedTickerDTO> tickerPage = new PageResult<>(tickers, 2, 10, 25, 3);
+        PageResult<ProhibitedKeywordDTO> keywordPage = new PageResult<>(keywords, 0, 10, 5, 1);
+
+        when(manageProhibitedTickerUseCase.getProhibitedTickers(2, 10)).thenReturn(tickerPage);
+        when(manageProhibitedKeywordUseCase.getProhibitedKeywords(0, 10)).thenReturn(keywordPage);
+
+        mockMvc.perform(get("/prohibited-tickers").param("tickerPage", "2"))
+                .andExpect(status().isOk())
+                .andExpect(view().name("prohibited-tickers/list"))
+                .andExpect(model().attributeExists("tickerPage"))
+                .andExpect(model().attributeExists("keywordPage"));
+
+        verify(manageProhibitedTickerUseCase, times(1)).getProhibitedTickers(2, 10);
+        verify(manageProhibitedKeywordUseCase, times(1)).getProhibitedKeywords(0, 10);
+    }
+
+    @Test
+    @DisplayName("Should delete prohibited ticker and redirect with page params")
     void testDeleteProhibitedTicker() throws Exception {
-        // Act & Assert
         mockMvc.perform(post("/prohibited-tickers/delete")
-                .param("ticker", "AAPL"))
+                .param("ticker", "AAPL")
+                .param("tickerPage", "0")
+                .param("keywordPage", "1"))
                 .andExpect(status().is3xxRedirection())
-                .andExpect(redirectedUrl("/prohibited-tickers"))
+                .andExpect(redirectedUrl("/prohibited-tickers?tickerPage=0&keywordPage=1"))
                 .andExpect(flash().attribute(WebConstants.UI_NOTIFICATION_KEY,
                         UiNotification.success("Ticker 'AAPL' desbloqueado y eliminado correctamente.")));
 
@@ -158,11 +173,10 @@ class ProhibitedTickerControllerTest {
     @Test
     @DisplayName("Should handle delete with different ticker id")
     void testDeleteProhibitedTickerWithDifferentId() throws Exception {
-        // Act & Assert
         mockMvc.perform(post("/prohibited-tickers/delete")
                 .param("ticker", "999"))
                 .andExpect(status().is3xxRedirection())
-                .andExpect(redirectedUrl("/prohibited-tickers"))
+                .andExpect(redirectedUrl("/prohibited-tickers?tickerPage=0&keywordPage=0"))
                 .andExpect(flash().attribute(WebConstants.UI_NOTIFICATION_KEY,
                         UiNotification.success("Ticker '999' desbloqueado y eliminado correctamente.")));
 
@@ -170,12 +184,14 @@ class ProhibitedTickerControllerTest {
     }
 
     @Test
-    @DisplayName("Should add prohibited keyword and redirect with success flash")
+    @DisplayName("Should add prohibited keyword and redirect with page params")
     void testAddProhibitedKeyword() throws Exception {
         mockMvc.perform(post("/prohibited-tickers/keywords")
-                .param("keyword", "ETF"))
+                .param("keyword", "ETF")
+                .param("tickerPage", "0")
+                .param("keywordPage", "2"))
                 .andExpect(status().is3xxRedirection())
-                .andExpect(redirectedUrl("/prohibited-tickers"))
+                .andExpect(redirectedUrl("/prohibited-tickers?tickerPage=0&keywordPage=2"))
                 .andExpect(flash().attribute(WebConstants.UI_NOTIFICATION_KEY,
                         UiNotification.success("Keyword 'ETF' añadida correctamente.")));
 
@@ -187,28 +203,31 @@ class ProhibitedTickerControllerTest {
     @Test
     @DisplayName("Should show error flash when adding prohibited keyword fails validation")
     void testAddProhibitedKeywordValidationError() throws Exception {
-        doThrow(new IllegalArgumentException("Keyword cannot be null or blank"))
+        doThrow(new DomainValidationException(DomainErrorCodes.KEYWORD_BLANK))
                 .when(manageProhibitedKeywordUseCase)
-                .addProhibitedKeyword(ProhibitedKeywordDTO.builder().keyword("").build());
+                .addProhibitedKeyword(ProhibitedKeywordDTO.builder().keyword(" ").build());
 
         mockMvc.perform(post("/prohibited-tickers/keywords")
+                .header("Referer", "/prohibited-tickers?tickerPage=0&keywordPage=0")
                 .param("keyword", " "))
                 .andExpect(status().is3xxRedirection())
-                .andExpect(redirectedUrl("/prohibited-tickers"))
+                .andExpect(redirectedUrl("/prohibited-tickers?tickerPage=0&keywordPage=0"))
                 .andExpect(flash().attribute(WebConstants.UI_NOTIFICATION_KEY,
                         UiNotification.error("Keyword cannot be null or blank")));
 
         verify(manageProhibitedKeywordUseCase, times(1))
-                .addProhibitedKeyword(ProhibitedKeywordDTO.builder().keyword("").build());
+                .addProhibitedKeyword(ProhibitedKeywordDTO.builder().keyword(" ").build());
     }
 
     @Test
-    @DisplayName("Should delete prohibited keyword and redirect with success flash")
+    @DisplayName("Should delete prohibited keyword and redirect with page params")
     void testDeleteProhibitedKeyword() throws Exception {
         mockMvc.perform(post("/prohibited-tickers/keywords/delete")
-                .param("keyword", "ETF"))
+                .param("keyword", "ETF")
+                .param("tickerPage", "1")
+                .param("keywordPage", "3"))
                 .andExpect(status().is3xxRedirection())
-                .andExpect(redirectedUrl("/prohibited-tickers"))
+                .andExpect(redirectedUrl("/prohibited-tickers?tickerPage=1&keywordPage=3"))
                 .andExpect(flash().attribute(WebConstants.UI_NOTIFICATION_KEY,
                         UiNotification.success("Keyword 'ETF' eliminada correctamente.")));
 
